--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -1,17 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 
+.col-lg-3 .col-md-3 {
+  margin-bottom : 5px;
+}
+
+.row {
+  margin-bottom: 10px;
+}
+
 #calcScreen {
   padding : 30px;
   font-size: 30px;
-  border : solid 1px blue;
   font-family: 'Orbitron', sans-serif;
+  border-radius : 10px;
+  margin-bottom: 5px;
+  background-color: lightgray;
 }
 
 .calcButton {
   width : 100%;
   height : 100%;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: lightgreen;
+  color: #fff;  
 }
 
 #result {
   color : blue;
+}
+
+.calcButton {
+  padding : 10px;
+  border-radius: 10px;
 }
