added a fews pixels to separate the rows containing the buttons

--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -25,10 +25,16 @@
   font-weight: bold;
   background-color: lightgreen;
   color: #fff;  
+  border : none;
 }
 
 #result {
   color : blue;
+}
+
+#operator {
+  background-color: orange;
+  border : none;
 }
 
 .calcButton {
