--- a/timer/src/App.css
+++ b/timer/src/App.css
@@ -1,3 +1,15 @@
 button {
   width: 100%;
+  background-color: green;
+  border : none;
+  border-radius: 5px;
+  color : #fff;
+}
+
+.time-value {
+  font-size : 70px;
+}
+
+.row {
+  margin-top: 20px;
 }
